Adicionando App.config com  connection string

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,4 +2,5 @@
 <repositories>
   <repository path="..\Uniplac.Mercado.Apresentacao.Web\packages.config" />
   <repository path="..\Uniplac.Mercado.Infra.Dados\packages.config" />
+  <repository path="..\Uniplac.Mercado.Infra.Testes\packages.config" />
 </repositories>
