--- a/Uniplac.Mercado.Aplicacao/Uniplac.Mercado.Aplicacao.csproj
+++ b/Uniplac.Mercado.Aplicacao/Uniplac.Mercado.Aplicacao.csproj
@@ -40,7 +40,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="Contrato\IProdutoAplicacao.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Serviço\ProdutoAplicacao.cs" />
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Uniplac.Mercado.Dominio\Uniplac.Mercado.Dominio.csproj">
+      <Project>{78b76b6c-7afd-4030-98c1-a08320d50ad0}</Project>
+      <Name>Uniplac.Mercado.Dominio</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
