--- a/Uniplac.Mercado.Apresentacao.Web/Uniplac.Mercado.Apresentacao.Web.csproj
+++ b/Uniplac.Mercado.Apresentacao.Web/Uniplac.Mercado.Apresentacao.Web.csproj
@@ -233,6 +233,13 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Site.Mobile.Master" />
     <Content Include="Views\web.config" />
+    <Content Include="Views\_ViewStart.cshtml" />
+    <Content Include="Views\Shared\_Layout.cshtml" />
+    <Content Include="Views\Produtoes\Create.cshtml" />
+    <Content Include="Views\Produtoes\Delete.cshtml" />
+    <Content Include="Views\Produtoes\Details.cshtml" />
+    <Content Include="Views\Produtoes\Edit.cshtml" />
+    <Content Include="Views\Produtoes\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -364,6 +371,7 @@
     <Compile Include="Contact.aspx.designer.cs">
       <DependentUpon>Contact.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Controllers\ProdutoesController.cs" />
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -401,7 +409,20 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Controllers\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Uniplac.Mercado.Aplicacao\Uniplac.Mercado.Aplicacao.csproj">
+      <Project>{0dd7b070-dbca-46e4-8979-a4461b448c54}</Project>
+      <Name>Uniplac.Mercado.Aplicacao</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Uniplac.Mercado.Dominio\Uniplac.Mercado.Dominio.csproj">
+      <Project>{78b76b6c-7afd-4030-98c1-a08320d50ad0}</Project>
+      <Name>Uniplac.Mercado.Dominio</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Uniplac.Mercado.Infra.Dados\Uniplac.Mercado.Infra.Dados.csproj">
+      <Project>{cd10123f-d49d-494a-af0e-94155dc3860b}</Project>
+      <Name>Uniplac.Mercado.Infra.Dados</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
