--- a/Uniplac.Mercado.Infra.Dados/Uniplac.Mercado.Infra.Dados.csproj
+++ b/Uniplac.Mercado.Infra.Dados/Uniplac.Mercado.Infra.Dados.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="Contexto\MercadoContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositorios\ProdutoRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -59,9 +60,7 @@
       <Name>Uniplac.Mercado.Dominio</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Repositorios\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
