--- a/Uniplac.Mercado.Infra.Testes/App.config
+++ b/Uniplac.Mercado.Infra.Testes/App.config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="MercadoDB" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=MercadoDb;Integrated Security=True"
+    <add name="MercadoDB" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=MercadoDB;Integrated Security=True"
          providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <entityFramework>
