--- a/Uniplac.Mercado.Aplicacao/Uniplac.Mercado.Aplicacao.csproj
+++ b/Uniplac.Mercado.Aplicacao/Uniplac.Mercado.Aplicacao.csproj
@@ -42,9 +42,11 @@
     <Compile Include="Class1.cs" />
     <Compile Include="Contrato\IItemVendaAplicacao.cs" />
     <Compile Include="Contrato\IProdutoAplicacao.cs" />
+    <Compile Include="Contrato\IVendaAplicacao.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Serviço\ItemVendaAplicacao.cs" />
     <Compile Include="Serviço\ProdutoAplicacao.cs" />
+    <Compile Include="Serviço\VendaAplicacao.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
