--- a/Uniplac.Mercado.Aplicacao.Testes/Uniplac.Mercado.Aplicacao.Testes.csproj
+++ b/Uniplac.Mercado.Aplicacao.Testes/Uniplac.Mercado.Aplicacao.Testes.csproj
@@ -65,6 +65,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VendaAplicacaoTeste.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Uniplac.Mercado.Aplicacao\Uniplac.Mercado.Aplicacao.csproj">
