Implementações classe ProdutoRepository (dados)

--- a/Uniplac.Mercado.Infra.Testes/Uniplac.Mercado.Infra.Testes.csproj
+++ b/Uniplac.Mercado.Infra.Testes/Uniplac.Mercado.Infra.Testes.csproj
@@ -57,6 +57,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="CriarNovoBancoProduto.cs" />
     <Compile Include="ProdutoDadosTeste.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
