Testes de Dominio. Implementação Inicial das telas.

--- a/Uniplac.Mercado.Dominio/Uniplac.Mercado.Dominio.csproj
+++ b/Uniplac.Mercado.Dominio/Uniplac.Mercado.Dominio.csproj
@@ -42,6 +42,7 @@
     <Compile Include="Contratos\IItemVendaRepository.cs" />
     <Compile Include="Contratos\IProdutoRepository.cs" />
     <Compile Include="Contratos\IVendaRepository.cs" />
+    <Compile Include="Exceptions\BusinessException.cs" />
     <Compile Include="ItemVenda.cs" />
     <Compile Include="Produto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
