--- a/Uniplac.Mercado.Dominio.Testes/Uniplac.Mercado.Dominio.Testes.csproj
+++ b/Uniplac.Mercado.Dominio.Testes/Uniplac.Mercado.Dominio.Testes.csproj
@@ -45,13 +45,22 @@
     </When>
     <Otherwise>
       <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
+        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework">
+          <Private>False</Private>
+        </Reference>
       </ItemGroup>
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ItemVendaTest.cs" />
+    <Compile Include="VendaTest.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Uniplac.Mercado.Dominio\Uniplac.Mercado.Dominio.csproj">
+      <Project>{78b76b6c-7afd-4030-98c1-a08320d50ad0}</Project>
+      <Name>Uniplac.Mercado.Dominio</Name>
+    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
