--- a/Uniplac.Mercado.Apresentacao.Webforms/Web.config
+++ b/Uniplac.Mercado.Apresentacao.Webforms/Web.config
@@ -9,7 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
-    <add name="MercadoDB" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=MercadoDb;Integrated Security=True" providerName="System.Data.SqlClient" />
+   <add name="MercadoDB" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=MercadoDB;Integrated Security=True"
+         providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
