--- a/Uniplac.Mercado.Infra.Testes/Uniplac.Mercado.Infra.Testes.csproj
+++ b/Uniplac.Mercado.Infra.Testes/Uniplac.Mercado.Infra.Testes.csproj
@@ -52,17 +52,23 @@
     </When>
     <Otherwise>
       <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
+        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework">
+          <Private>False</Private>
+        </Reference>
       </ItemGroup>
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="CriarNovoBancoItemVenda.cs" />
     <Compile Include="CriarNovoBancoProduto.cs" />
     <Compile Include="ProdutoDadosTeste.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ItemVendaDadosTeste.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
