Adicionando Funcionalidade de Details de venda. Refeito a tela de criação de vendas.

--- a/Uniplac.Mercado.Apresentacao.Webforms/Uniplac.Mercado.Apresentacao.Webforms.csproj
+++ b/Uniplac.Mercado.Apresentacao.Webforms/Uniplac.Mercado.Apresentacao.Webforms.csproj
@@ -260,6 +260,7 @@
     <Content Include="Views\Vendas\Index.cshtml" />
     <Content Include="Views\Vendas\ModifyItemVenda.cshtml" />
     <Content Include="Views\Vendas\CreateWithItemVenda.cshtml" />
+    <Content Include="Views\Vendas\ModifyItemVendaModel.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
