--- a/Uniplac.Mercado.Infra.Dados/Uniplac.Mercado.Infra.Dados.csproj
+++ b/Uniplac.Mercado.Infra.Dados/Uniplac.Mercado.Infra.Dados.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Configurations\VendaConfiguration.cs" />
     <Compile Include="Contexto\MercadoContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositorios\ItemVendaRepository.cs" />
